<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.nex3z.examples.mqtttest.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TextTitle"
            android:text="@string/caption_client_config" />

        <EditText
            android:id="@+id/et_client_id"
            android:layout_width="match_parent"
            style="@style/Input"
            android:hint="@string/caption_client_id"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_broker_address"
                style="@style/Input"
                android:layout_weight="1"
                android:hint="@string/caption_broker_address"/>

            <Button
                android:id="@+id/btn_connect"
                style="@style/Button"
                android:text="@string/caption_connect"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_subscribe_topic"
                style="@style/Input"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:hint="@string/caption_subscribe_topic"/>

            <EditText
                android:id="@+id/et_subscribe_qos"
                style="@style/Input"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="@string/caption_publish_qos" />

            <Button
                android:id="@+id/btn_subscribe"
                style="@style/Button"
                android:text="@string/caption_subscribe"
                android:enabled="false"/>

        </LinearLayout>

        <TextView
            style="@style/TextTitle"
            android:layout_marginTop="16dp"
            android:text="@string/caption_client_config" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_publish_topic"
                style="@style/Input"
                android:layout_weight="1"
                android:hint="@string/caption_publish_topic"/>

            <EditText
                android:id="@+id/et_publish_qos"
                style="@style/Input"
                android:inputType="number"
                android:hint="@string/caption_publish_qos" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_publish_content"
                style="@style/Input"
                android:layout_weight="1"
                android:hint="@string/caption_publish_content"/>

            <Button
                android:id="@+id/btn_publish"
                style="@style/Button"
                android:text="@string/caption_publish"
                android:enabled="false"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        style="@style/TextTitle"
        android:layout_marginTop="16dp"
        android:text="@string/caption_received" />

    <ScrollView
        android:id="@+id/sv_received"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_received"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"/>

    </ScrollView>

</LinearLayout>
